# wb-parser

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: settings.py
src/app/: dao.py  schemas.py
src/dao/: dao.py
src/database/: database.py  models.py
src/parser/: parser.py
